--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,12 +5,14 @@
 // Learn more about theming and how to use it for your application's
 // custom components at https://material.angular.dev/guide/theming
 @use '@angular/material' as mat;
+@use 'styles/theme-colors' as theme-colors;
+@use 'styles/overrides/toolbar.scss';
 
 html {
   @include mat.theme((
     color: (
-      primary: mat.$azure-palette,
-      tertiary: mat.$blue-palette,
+      primary: theme-colors.$primary-palette,
+      tertiary: theme-colors.$tertiary-palette,
     ),
     typography: Roboto,
     density: 0,
